lang/examples/good/17-01-lambda.wdr
fun main(): Void {
  var a: (Int) -> Int = lambda (parameter: Int): Int => {
    return parameter + 1;
  };

  printInt(a(42));
  return;
}