lang/examples/bad/12-02-forward-variable.wdr
var a: Int = b;
var b: Int = 1;

fun main(): Void {
  printInt(a);

  return;
}
